# FAYN

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROGRESS.md  build-linux.sh
docs/: DESIGN.md
experiments/: CMakeLists.txt  experiment.cpp  experiment.hpp
experiments/deep_elm/: CMakeLists.txt  deep_elm.cpp  deep_elm.hpp
experiments/ensemble_mnist/: CMakeLists.txt  ensemble_mnist.cpp  ensemble_mnist.hpp
experiments/hebbian_mnist/: CMakeLists.txt  hebbian_mnist.cpp  hebbian_mnist.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  device.hpp  graph.cpp  graph.hpp  layer.hpp  loss.hpp  tensor.cpp  tensor.hpp  thread_pool.hpp
src/cuda/: CMakeLists.txt  stream_pool.cpp  stream_pool.hpp
src/io/: CMakeLists.txt  cifar_loader.cpp  cifar_loader.hpp  data_source.hpp  logger.cpp  logger.hpp  mnist_loader.cpp  mnist_loader.hpp
src/ops/: CMakeLists.txt  activations.cu  activations.hpp  ciw_init.hpp  conv_frontend.cu  conv_frontend.hpp  dense.cu  dense.hpp  elm_solver.hpp  hebbian.cu  hebbian.hpp  hebbian_updater.hpp  one_hot.cu  one_hot.hpp
src/stats/: CMakeLists.txt  activation_stats.cu  activation_stats.hpp  ema.hpp  event_bus.cpp  event_bus.hpp  events.hpp
src/topology/: CMakeLists.txt  mutation_engine.cpp  mutation_engine.hpp  mutation_ops.hpp
tools/: CMakeLists.txt  registry.hpp  runner.cpp  runner_cuda.cu  smoke_test.cu
